# ai-agents-course

./: README.md  pyproject.toml
001_foundations_of_ai_agents/: 001_README.md  002_README.md  003_README.md  004_README.md
002_building_your_first_agent/: 001_README.md  002_README.md  003_README.md  004_README.md
002_building_your_first_agent/examples/: 001_example.py  002_example.py  003_example.py
002_building_your_first_agent/examples/data/: data.txt
003_enhancing_agents_with_custom_tools_and_rag/: 001_README.md  002_README.md  003_README.md  004_README.md
004_orchestrating_multi_agent_systems/: 001_README.md  002_README.md  003_README.md
